# effective-guide

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  djgpp.toolchain.cmake
Engine/: CMakeLists.txt
Engine/BaseObject/: CMakeLists.txt
Engine/BaseObject/include/Engine/: NamedObject.hpp  TypedObject.hpp  TypedObjectContainer.hpp
Engine/Configuration/: CMakeLists.txt
Engine/Configuration/include/Engine/Configuration/: Parser.hpp  ParserListener.hpp
Engine/Configuration/src/: INIReader.hpp  StreamIniReader.cpp
Engine/Logger/: CMakeLists.txt
Engine/Logger/include/Logger/: Format.hpp  Logger.hpp  LoggerSink.hpp  SourceLocation.hpp
Engine/Logger/src/: Logger.cpp
Engine/Math/: CMakeLists.txt
Engine/Math/include/Engine/Math/: Color.hpp  FixedPointNumber.hpp  Matrix.hpp  Palette.hpp  PaletteMixingPlan.hpp  Rect.hpp  Vec.hpp  Vec2.hpp  Vec3.hpp
Engine/ResourceSystem/: CMakeLists.txt
Engine/ResourceSystem/include/Engine/ResourceSystem/: Error.hpp  Manager.hpp  PackIndex.hpp  Resource.hpp  ResourcePtr.hpp
Engine/ResourceSystem/include/Engine/ResourceSystem/Info/: Actor.hpp  Bitmap.hpp  Map.hpp  MapPosition.hpp  Portal.hpp  Sprite.hpp  Tileset.hpp  Type.hpp
Engine/ResourceSystem/include/Engine/ResourceSystem/Resources/: Bitmap.hpp  Map.hpp  Sprite.hpp
Engine/ResourceSystem/src/: Bitmap.cpp  Error.cpp  Info.cpp  Info.hpp  LoaderMap.cpp  LoaderMap.hpp  Manager.cpp  Map.cpp  PackIndex.cpp  PackIndexMaker.cpp  PackIndexMaker.hpp  Resource.cpp  ResourcePackConfiguration.cpp  ResourcePackConfiguration.hpp  ResourcePtr.cpp  ResourceSectionStringConvert.hpp  Sprite.cpp  base64.hpp
Engine/ScriptSystem/: CMakeLists.txt
Engine/ScriptSystem/include/Engine/ScriptSystem/: BoxedCast.hpp  BoxedValue.hpp  FunctionParams.hpp  ProxyFunction.hpp  ScriptEngine.hpp  TypeInfo.hpp
Engine/ScriptSystem/include/Engine/ScriptSystem/detail/: AttributeAccess.hpp  BoxedValue.hpp  CallUtils.hpp  CastHelpers.hpp  FunctionParams.hpp  FunctionSignature.hpp  HandleReturn.hpp  NativeFunctionT.hpp  ProxyFunction.hpp  TypeInfo.hpp  Utils.hpp
Engine/ScriptSystem/src/: LuaScriptEngine.cpp  LuaScriptEngine.hpp  ScriptEngine.cpp
Engine/ScriptSystem/src/Lua/: BoxedToLuaConverter.cpp  BoxedToLuaConverter.hpp  Error.cpp  Error.hpp  LuaProxyFunction.cpp  LuaProxyFunction.hpp  LuaToBoxedConverter.cpp  LuaToBoxedConverter.hpp  LuaToNativeTrampoline.cpp  LuaToNativeTrampoline.hpp  NamedFunction.cpp  NamedFunction.hpp  RefFunction.cpp  RefFunction.hpp  TrampolineData.hpp  UserDataHolder.cpp  UserDataHolder.hpp
Engine/ScriptSystem/test/: CMakeLists.txt  tests.cpp
Engine/Stream/: CMakeLists.txt
Engine/Stream/include/Engine/Stream/: Stream.hpp  StreamFactory.hpp
Engine/Utils/: CMakeLists.txt
Engine/Utils/include/Engine/: string_view_utils.hpp
Engine/Utils/src/: string_view_utils.cpp
Engine/include/: Engine.hpp
Engine/include/Engine/: Bitmap.hpp  CommonTypes.hpp  Map.hpp  Math.hpp  Menu.hpp  NamedObject.hpp  Resource.hpp  ResourceStream.hpp  System.hpp  TickCommand.hpp  TileSet.hpp  TypedObject.hpp  TypedObjectContainer.hpp
Engine/include/Engine/Resource/: Bitmap.hpp  Resource.hpp  SharedResource.hpp  Sprite.hpp
Engine/include/Engine/Resources/: Bitmap.hpp  Map.hpp  ResourcePtr.hpp  Sprite.hpp  Tileset.hpp
Engine/include/Engine/RuntimeConfig/: Entry.hpp  ParserListener.hpp
Engine/include/Engine/System/: InputEvent.hpp  InputSystem.hpp  OutputScreen.hpp  ResourceStreamLoader.hpp  RootStreamFactory.hpp
Engine/include/Engine/ThingSystem/: Actor.hpp  ComponentContainer.hpp  Enemy.hpp  Info.hpp  Manager.hpp  Thing.hpp  TypedObject.hpp
Engine/src/: BMPLDR.cpp  BMPLDR.hpp  Engine.cpp  EngineConfiguration.cpp  EngineConfiguration.hpp  Error.cpp  Error.hpp  GIFLDR.cpp  GIFLDR.hpp  INIReader.hpp  Logger.cpp  Logger.hpp  Map.cpp  MapRender.cpp  MapRender.hpp  NamedObject.cpp  Resource.cpp  ResourceConfiguration.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  TileSet.cpp  Tileset.cpp  Tileset.hpp  configuration_error.cpp  configuration_error.hpp  string_view_utils.cpp  string_view_utils.hpp
Engine/src/INIReader/: StreamIniReader.cpp  StreamIniReader.hpp
Engine/src/Loaders/: MapConfigParser.cpp  MapConfigParser.hpp  ResourcePackConfiguration.cpp  ResourcePackConfiguration.hpp
Engine/src/Resource/: Bitmap.cpp  LazyLoadingResource.hpp  Map.cpp  Map.hpp  Resource.cpp  ResourceBmp.cpp  ResourceBmp.hpp  Sprite.cpp
Engine/src/Resources/: Bitmap.cpp  Map.cpp  Sprite.cpp  Tileset.cpp
Engine/src/States/: LoadingMap.cpp  LoadingMap.hpp  Running_OnMap.cpp  Running_OnMap.hpp  State.cpp  State.hpp
Engine/src/StrFormat/: Format.hpp
Engine/src/ThingSystem/: Actor.cpp  ComponentContainer.cpp  Enemy.cpp  Manager.cpp  Thing.cpp
Engine/test/: CMakeLists.txt  tests.cpp
Game_DOS/: CMakeLists.txt  DosDetect.cpp  DosDetect.hpp  DosMode13.cpp  DosMode13.hpp  Signals.cpp  Signals.hpp  StdFile.cpp  StdFile.hpp  Timer.cpp  Timer.hpp  UNUSED.hpp  main.cpp
Game_DOS/KeyboardDecoding/: KeyboardEventExtendedHandler.hpp  KeyboardEventHandler.cpp  KeyboardEventHandler.hpp  KeyboardEventHandlerResult.hpp  KeyboardEventNormalHandler.hpp  KeyboardEventPauseHandler.hpp
Game_DOS/MouseInt33/: MouseComDrv.cpp  MouseComDrv.hpp
Game_TEST/: CMakeLists.txt
Game_TEST/src/: PosixInput.cpp  PosixInput.hpp  ResourceStreamSystemImpl.cpp  ResourceStreamSystemImpl.hpp  SystemImpl.cpp  SystemImpl.hpp  entry_point.cpp
Game_WIN/: CMakeLists.txt
Game_WIN/src/: RenderWindow.cpp  RenderWindow.hpp  Win32FileStream.cpp  Win32FileStream.hpp  Win32StreamFactory.cpp  Win32StreamFactory.hpp  Win32System.cpp  Win32System.hpp  Win32Window.cpp  Win32Window.hpp  main.cpp  string_2_wstring.hpp
bmp_png/: CMakeLists.txt
bmp_png/include/Loaders/: BitmapLoader.hpp
bmp_png/src/: BitmapLoader.cpp  gif_load.hpp
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
lodepng/: CMakeLists.txt
resources/: game.ini
src/: CMakeLists.txt  DosMode13.cpp  DosMode13.hpp  DosSystem.cpp  DosSystem.hpp  main.cpp
test/: convert_bmp.py  grass_biome.tsx  map1.tmx  map_exported.tmx  (+2 more)
(+6 files in other folders)
